# rust-web-template

./: Cargo.toml  README.md  cargo-generate.toml
src/: app.rs  lib.rs
