[package]
name = "{{project-name}}"
version = "0.1.0"
authors = [ "{{authors}}" ]
edition = "2021"
license = "{{license}}"
description = "{{description}}"

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
sea-orm = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "local-time"] }
utoipa = { version = "2.4", features = ["axum_extras"] }
utoipa-swagger-ui = "3.0"


[dev-dependencies]
reqwest = "0.11.13"
